--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@
 *.tar.gz
 *.rar
 
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
 # build folders
 bin/
 target/
@@ -26,8 +29,7 @@ nbproject/private/
 build/
 nbbuild/
 dist/
-nbdist/ 
+nbdist/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Eclipse
+.settings/
