--- a/.classpath
+++ b/.classpath
@@ -17,5 +17,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/gilson.melo/.jdks/corretto-19.0.2/lib/jrt-fs.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
