--- a/db.properties
+++ b/db.properties
@@ -1,4 +1,4 @@
-user=root
-password=BellyDani2536
-dburl=jdbc:mysql://localhost:3306/coursejdbc
+user=${SPRING_DATASOURCE_USERNAME}
+password=${SPRING_DATASOURCE_PASSWORD}
+dburl=${SPRING_DATASOURCE_URL}
 useSSL=false
